--- a/mcp_client/mcp_config.json
+++ b/mcp_client/mcp_config.json
@@ -4,7 +4,7 @@
             "command": "uv",
             "args": [
                 "--directory",
-                "/home/user/jenkins_mcpp/mcp_server",
+                "/home/user/jenkins_mcp/mcp-mcp_server",
                 "run",
                 "fetech_info.py"
             ]
@@ -15,7 +15,7 @@
                 "--directory",
                 "/home/user/jenkins_mcp/mcp_server",
                 "run",
-                "sysinfo.py"
+                "jenkins_mcp_server.py"
             ]
         }
     }
