--- a/mcp_server/pyproject.toml
+++ b/mcp_server/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "mcp-sysinfo"
-version = "0.1.0"
-description = "Simple mcp server to view system information"
+name = "jenkins-mcp"
+version = "0.0.1"
+description = "Jenkins mcp server to view system information"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
