I change the name of jenkins_mcp in mcp_config.json

--- a/mcp_client/mcp_config.json
+++ b/mcp_client/mcp_config.json
@@ -9,7 +9,7 @@
                 "fetech_info.py"
             ]
         },
-        "sysinfo": {
+        "jenkins_mcp": {
             "command": "uv",
             "args": [
                 "--directory",
